Ultimos cambios del parche.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,10 +16,24 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 8.</li>
-                        <li>Ahora los <span class="label label-extra">Héroes</span> ya no duplican sus bonuses por nivel, sino que ganan el doble de experiencia en combate si son de tu color.</li>
+                        <li>Ahora los <span class="label label-extra">Dioses</span> tienen muchísimo <span class="label label-extra">Oro</span> y <span class="label label-artifact">Runas</span> para robarles en <span class="label label-extra">Pillaje</span>.</li>
+                        <li>Ahora los <span class="label label-extra">Héroes</span> ya no duplican sus bonuses por nivel, sino que ganan el doble de experiencia en combate si son de tu mismo color.</li>
                         <li>Ahora la habilidad <span class="label label-extra">Prisa</span> ya no incrementa la velocidad, sino que iguala la velocidad enemiga en un combate para atacar a la vez.</li>
-                        <li>Ahora al intentar lanzar un <span class="label label-extra">Hechizo</span> en batalla, si no pasa las barreras enemigas, no consume maná, como ocurre con los <span class="label label-artifact">Artefactos</span>.</li>
-                        <li>Se han modificado los siguientes <span class="label label-extra">Hechizos</span> de nivel 5:
+                        <li>Ahora al intentar lanzar un <span class="label label-extra">Hechizo</span> en batalla, si no pasa las barreras enemigas, no consume el maná.</li>
+                        <li>Se han modificado los siguientes <span class="label label-artifact">Artefactos</span>:
+                            <ul>
+                                <li><span class="label label-artifact">Reloj de Arena</span>, aumentado de 75 a 150 los turnos restados a los encantamientos.</li>
+                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 6% los edificios destruidos.</li>
+                                <li><span class="label label-artifact">Cabeza de Medusa</span>, aumentado de 3 hasta 5 los niveles eliminados.</li>
+                                <li><span class="label label-artifact">Muñeca Voodoo</span>, aumentado de 50 hasta 100 los turnos eliminados.</li>
+                            </ul>
+                        </li>
+                        <li>Se han modificado los siguientes <span class="label label-extra">Héroes</span>:
+                            <ul>
+                                <li><span class="label label-success">Ladrona Elfa</span>, aumentado de 1 a 3 los turnos eliminados por nivel.</li>
+                            </ul>
+                        </li>
+                        <li>Se han modificado los siguientes <span class="label label-extra">Hechizos</span>:
                             <ul>
                                 <li><span class="label label-danger">Infierno</span>, ahora destruye un -2% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
                                 <li><span class="label label-info">Tsunami</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
