Arreglada una imagen que no cargaba, modificado parche y mejorado artifactfixtures.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -170,7 +170,7 @@
                         <li>Ahora los Artefactos, Hechizos y Unidades tienen niveles de rareza. Estos afectan a la frecuencia de apararición en el juego de cualquiera de las maneras habituales:
                             <ul>
                                 <li><span class="label label-extra">Común</span>, como las diferentes <span class="label label-extra">Pociones</span>.</li>
-                                <li><span class="label label-extra">Raro</span>, como las <span class="label label-extra">Brújulas Mágicas</span> o los <span class="label label-extra">Huevos de Dragón</span>.</li>
+                                <li><span class="label label-artifact">Raro</span>, como las <span class="label label-extra">Brújulas Mágicas</span> o los <span class="label label-extra">Huevos de Dragón</span>.</li>
                                 <li><span class="label label-legendary">Legendario</span>, como los <span class="label label-legendary">Anillos</span>.</li>
                             </ul>
                         </li>
@@ -189,17 +189,17 @@
                         <li>Se ha introducido en el juego las <span class="label label-artifact">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-artifact">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
                         <li>Se han añadido o modificado los siguientes Artefactos:
                             <ul>
-                                <li><span class="label label-extra">Poción de Fuerza</span>, +30% <span class="label label-extra">Ataque</span> a tus tropas.</li>
-                                <li><span class="label label-extra">Poción de Vitalidad</span>, +30% <span class="label label-extra">Defensa</span> a tus tropas.</li>
-                                <li><span class="label label-extra">Poción de Agilidad</span>, renombrado de <span class="label label-extra">Botas de Velocidad</span> +1 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
-                                <li><span class="label label-extra">Poción de Amor</span>, renombrada de <span class="label label-extra">Elixir de Amor</span>, +30% <span class="label label-extra">Personas</span> a tu Reino.</li>
-                                <li><span class="label label-extra">Poción de Pureza</span>, renombrada de <span class="label label-extra">Agua Bendita</span>, elimina un <span class="label label-extra">Encantamiento</span> aleatorio de tu Reino.</li>
-                                <li><span class="label label-extra">Muñeca Voodoo</span>, hasta -25 <span class="label label-extra">Turnos</span> al Reino enemigo.</li>
-                                <li><span class="label label-extra">Reloj de Arena</span>, hasta -100 <span class="label label-extra">Turnos</span> a los Encantamientos de tu Reino.</li>
-                                <li><span class="label label-extra">Cuerno de Guerra</span>, invoca <span class="label label-extra">Humanos</span>.</li>
-                                <li><span class="label label-extra">Demonio Embotellado</span>, renombrado de <span class="label label-extra">Calavera Maldita</span>.</li>
-                                <li><span class="label label-extra">Barril de Pólvora</span>, ahora destruye un 3% de todos los <span class="label label-extra">Edificios</span> enemigos.</li>
-                                <li><span class="label label-extra">Tela de Araña</span>, -2 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
+                                <li><span class="label label-artifact">Poción de Fuerza</span>, +30% <span class="label label-extra">Ataque</span> a tus tropas.</li>
+                                <li><span class="label label-artifact">Poción de Vitalidad</span>, +30% <span class="label label-extra">Defensa</span> a tus tropas.</li>
+                                <li><span class="label label-artifact">Poción de Agilidad</span>, renombrado de <span class="label label-extra">Botas de Velocidad</span> +1 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
+                                <li><span class="label label-artifact">Poción de Amor</span>, renombrada de <span class="label label-extra">Elixir de Amor</span>, +30% <span class="label label-extra">Personas</span> a tu Reino.</li>
+                                <li><span class="label label-artifact">Poción de Pureza</span>, renombrada de <span class="label label-extra">Agua Bendita</span>, elimina un <span class="label label-extra">Encantamiento</span> aleatorio de tu Reino.</li>
+                                <li><span class="label label-artifact">Muñeca Voodoo</span>, hasta -25 <span class="label label-extra">Turnos</span> al Reino enemigo.</li>
+                                <li><span class="label label-artifact">Reloj de Arena</span>, hasta -100 <span class="label label-extra">Turnos</span> a los Encantamientos de tu Reino.</li>
+                                <li><span class="label label-artifact">Cuerno de Guerra</span>, invoca <span class="label label-extra">Humanos</span>.</li>
+                                <li><span class="label label-artifact">Demonio Embotellado</span>, renombrado de <span class="label label-extra">Calavera Maldita</span>.</li>
+                                <li><span class="label label-artifact">Barril de Pólvora</span>, ahora destruye un 3% de todos los <span class="label label-extra">Edificios</span> enemigos.</li>
+                                <li><span class="label label-artifact">Tela de Araña</span>, -2 <span class="label label-extra">Velocidad</span> a tus tropas.</li>
                             </ul>
                         </li>
                         <li>Se han añadido los siguientes Héroes:
