--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -17,15 +17,29 @@
                     <ul>
                         <li>Comienza la Temporada 8.</li>
                         <li>Ahora los <span class="label label-extra">Dioses</span> tienen muchísimo <span class="label label-extra">Oro</span> y <span class="label label-artifact">Runas</span> para robarles en <span class="label label-extra">Pillaje</span>.</li>
+                        <li>Ahora los <span class="label label-extra">Dioses</span> exigen mayores sacrificios al usar el templo.</li>
+                        <li>Ahora los <span class="label label-extra">Encantamientos</span> otorgan poder por nivel a tu Reino.</li>
                         <li>Ahora los <span class="label label-extra">Héroes</span> ya no duplican sus bonuses por nivel, sino que ganan el doble de experiencia en combate si son de tu mismo color.</li>
-                        <li>Ahora la habilidad <span class="label label-extra">Prisa</span> ya no incrementa la velocidad, sino que iguala la velocidad enemiga en un combate para atacar a la vez.</li>
+                        <li>Ahora la habilidad <span class="label label-extra">Prisa</span> ya no incrementa la velocidad, sino que iguala la velocidad enemiga en combate para atacar a la vez.</li>
                         <li>Ahora al intentar lanzar un <span class="label label-extra">Hechizo</span> en batalla, si no pasa las barreras enemigas, no consume el maná.</li>
-                        <li>Se han modificado los siguientes <span class="label label-artifact">Artefactos</span>:
+                        <li>Ahora el nivel máximo de <span class="label label-extra">Magia</span> es 10.</li>
+                        <li>Ahora en la subasta no pueden aparecer <span class="label label-extra">Hechizos</span> de nivel 4 o 5.</li>
+                        <li>Se han reorganizado todos los <span class="label label-extra">Hechizos</span> para que los más únicos de cada color estén en los niveles superiores.</li>
+                        <li>Se han reasignado muchas <span class="label label-extra">Habilidades</span> de <span class="label label-extra">Tropas</span>.</li>
+                        <li>Se han cambiado los items vendidos en la tienda interna del juego.</li>
+                        <li>Se han modificado/añadido los siguientes <span class="label label-artifact">Artefactos</span>:
                             <ul>
-                                <li><span class="label label-artifact">Reloj de Arena</span>, aumentado de 75 a 150 los turnos restados a los encantamientos.</li>
-                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 6% los edificios destruidos.</li>
-                                <li><span class="label label-artifact">Cabeza de Medusa</span>, aumentado de 3 hasta 5 los niveles eliminados.</li>
-                                <li><span class="label label-artifact">Muñeca Voodoo</span>, aumentado de 50 hasta 100 los turnos eliminados.</li>
+                                <li><span class="label label-artifact">Reloj de Arena</span>, aumentado de 75 a 150 los turnos restados a tus encantamientos.</li>
+                                <li><span class="label label-artifact">Barril de Pólvora</span>, aumentado de 3% a 6% los edificios enemigos destruidos.</li>
+                                <li><span class="label label-artifact">Cabeza de Medusa</span>, aumentado de 3 hasta 5 los niveles enemigos eliminados.</li>
+                                <li><span class="label label-artifact">Espejo Roto</span>, rompe un encantamiento enemigo aleatorio.</li>
+                                <li><span class="label label-artifact">Polvo de Hadas</span>, roba tropas enemigas y las agrega a tu Reino.</li>
+                                <li><span class="label label-artifact">Santa Granada</span>, destruye tropas enemigas.</li>
+                                <li><span class="label label-legendary">Amuleto Guerrero</span>, +50 de <span class="label label-extra">Experiencia</span> a tus <span class="label label-extra">Héroes</span> tras un combate.</li>
+                                <li><span class="label label-legendary">Amuleto Erudito</span>, +20% de bonus de <span class="label label-extra">Investigación</span>.</li>
+                                <li><span class="label label-legendary">Amuleto Exótico</span>, +1 <span class="label label-extra">Tierra</span> al <i class="fa fa-fw fa-hourglass-half"></i>.</li>
+                                <li><span class="label label-legendary">Amuleto Rúnico</span>, +1% <span class="label label-artifact">Artefactos</span> encontrados al azar.</li>
+                                <li><span class="label label-legendary">Amuleto Maldito</span>, -20% a todos los <span class="label label-extra">Bonuses</span> de tu Reino.</li>
                             </ul>
                         </li>
                         <li>Se han modificado los siguientes <span class="label label-extra">Héroes</span>:
@@ -34,21 +48,12 @@
                             </ul>
                         </li>
                         <li>Se han modificado los siguientes <span class="label label-extra">Hechizos</span>:
-                            <ul>
-                                <li><span class="label label-danger">Infierno</span>, ahora destruye un -2% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
-                                <li><span class="label label-info">Tsunami</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
-                                <li><span class="label label-primary">Palabra Santa</span> por <span class="label label-primary">Rayo de Luz</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
-                                <li><span class="label label-success">Rayo de Sol</span> por <span class="label label-success">Enredaderas</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
-                                <li><span class="label label-warning">Eclipse</span> por <span class="label label-warning">Cadena de Relámpagos</span>, ahora destruye un -1% de <span class="label label-extra">Tropas</span> enemigas al azar por <i class="fa fa-fw fa-magic"></i>.</li>
-                            </ul>
-                        </li>
-                        <li>Se han añadido nuevos <span class="label label-legendary">Artefactos Legendarios</span>:
-                            <ul>
-                                <li><span class="label label-legendary">Amuleto Guerrero</span>, +50 de <span class="label label-extra">Experiencia</span> a tus <span class="label label-extra">Héroes</span> tras un combate.</li>
-                                <li><span class="label label-legendary">Amuleto Erudito</span>, +20% de bonus de <span class="label label-extra">Investigación</span>.</li>
-                                <li><span class="label label-legendary">Amuleto Exótico</span>, +1 <span class="label label-extra">Tierra</span> al <i class="fa fa-fw fa-hourglass-half"></i>.</li>
-                                <li><span class="label label-legendary">Amuleto Rúnico</span>, +1% <span class="label label-artifact">Artefactos</span> encontrados al azar.</li>
-                                <li><span class="label label-legendary">Amuleto Maldito</span>, -20% a todos los <span class="label label-extra">Bonuses</span> de tu Reino.</li>
+                        <ul>
+                            <li><span class="label label-warning">Eclipse</span>, encantamiento que reduce el poder de tu Reino para que sea más dificil atacarte.</li>
+                            <li><span class="label label-danger">Infierno</span>, como <span class="label label-danger">Bola de Fuego</span> pero tiene como objetivo a todas las tropas enemigas.</li>
+                                <li><span class="label label-info">Tsunami</span> por <span class="label label-info">Hipnosis</span>, roba tropas enemigas y las agrega a tu ejército.</li>
+                                <li><span class="label label-primary">Palabra Santa</span> por <span class="label label-primary">Condena</span>, encantamiento que hace perder turnos al enemigo.</li>
+                                <li><span class="label label-success">Rayo de Sol</span> por <span class="label label-success">Marca del Cazador</span>, encantamiento para que el mago enemigo pueda ser atacado por cualquiera.</li>
                             </ul>
                         </li>
                     </ul>
