--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -53,9 +53,9 @@
                         <div class="form-group">
                             <div class="input-group">
                                 {% if not item.artifact.skill.self and not item.artifact.skill.battle %}
-                                <select class="form-control selectpicker" id="target" name="target" data-live-search="true" data-size="5" title="Objetivo">
+                                <select class="form-control selectpicker show-tick dropup" id="target" name="target" data-live-search="true" data-size="5" title="Objetivo">
                                     {% for target in targets if target != player %}
-                                        <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick }}</span>">{{ target.nick }}</option>
+                                        <option value="{{ target.id }}" data-content="<span class='label label-{{ target.faction.class }}'>{{ target.nick|truncate(12) }}</span> <small>{{ target.power|nf }}</small>">{{ target.nick }}</option>
                                     {% endfor %}
                                 </select>
                                 {% endif %}
